--- a/src/pages/Users/users.module.css
+++ b/src/pages/Users/users.module.css
@@ -148,7 +148,7 @@
 }
 
 .wrapper .modal-form {
-  max-height: 450px;
+  max-height: 550px;
   overflow-y: auto;
   padding-right: 20px;
   scrollbar-width: thin;
